--- a/src/style/Darkstyle.css
+++ b/src/style/Darkstyle.css
@@ -106,7 +106,7 @@ div#circleone {
   grid-template-areas: "place";
 }
 
-div.text-container {
+div.title-container {
   grid-area: place;
   z-index: 10;
 }
@@ -115,19 +115,17 @@ div.reflection-container {
   grid-area: place;
   display: grid;
   height: 5rem;
-  /* background-color: red; */
-  /* transform: scaleY(1.5); */
+
   transform-origin: bottom;
   /* border: red solid 2px; */
-  /* transform: perspective(100px) rotateX(20deg) scaleY(1.5) translateY(-3px); */
-  /* transform-origin: top; */
   filter: blur(1px);
   /* box-shadow: 2px 2px 2px red; */
   /* overflow: hidden; */
 }
 
 h1.title-text,
-h1.reflection-text {
+h1.reflection-text,
+h1.reflection-text-highlight {
   font-size: 7rem;
   margin: 0;
   padding: 0;
@@ -148,30 +146,39 @@ h1.reflection-text {
   position: absolute;
   color: rgba(128, 128, 128, 0.774);
   font-size: 7rem;
-  line-height: 5.5rem;
+  line-height: 5.6rem;
   transform: rotateY(180deg) rotateZ(180deg);
   transform-origin: bottom;
   text-shadow: 0 0 4px #fff, 0 0 10px #ffffffbb, 0 0 21px #ffffff9f,
     0 0 42px rgb(255, 126, 203, 0.5), 0 0 82px rgb(255, 126, 203, 0.4),
     0 0 92px rgb(255, 126, 203, 0.3), 0 0 102px rgb(255, 126, 203, 0.2),
     0 0 151px rgba(255, 126, 203, 0.1);
-  opacity: 80%;
-  /* background: linear-gradient(black, white);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent; */
+  opacity: 70%;
+
 }
 
+h1.reflection-text-highlight {
+  position: absolute;
+  font-weight: 400;
+  color: rgba(128, 128, 128, 0.774);
+  font-size: 7rem;
+  line-height: 5.6rem;
+  transform: rotateY(180deg) rotateZ(180deg);
+  transform-origin: bottom;
+  background: linear-gradient(transparent, rgb(255, 212, 255));
+  -webkit-background-clip: text;
+  -webkit-text-stroke: 4px transparent;
+  filter: blur(2px);
+}
+
+/* .reflection-cover only covers the reflection itself */
 .reflection-cover {
   position: absolute;
   justify-self: center;
-  /* border: red solid 2px; */
   width: 125%;
   height: 115%;
   transform: rotateY(180deg) rotateZ(180deg);
   transform-origin: bottom;
-  /* box-shadow: inset 0px 20px 50px 5px black,
-  inset 0px -2px 10px -10px red,
-  0 0px 20px 50px black; */
   box-shadow: inset 0px 0px 50px 5px black,
   inset 0px -2px 10px -10px red,
   0 0px 40px 0px black;
@@ -181,16 +188,28 @@ h1.reflection-text {
   align-items: center;
 }
 
+/* .glass-reflection covers ground */
 .glass-reflection {
+  
   height: 100%;
   width: 100%;
-  background: linear-gradient(black, white);
+  background: linear-gradient(black 20%, white 200%);
   /* border: red solid 3px; */
+  box-sizing: border-box;
   justify-self: center;
   align-self: center;
   position: absolute;
   opacity: 50%;
+  overflow: hidden;
 
+}
+
+.reflection-blend {
+  height: 100%;
+  width: 100%;
+  background: radial-gradient(60% 80% at 50% 5%, transparent 25%, rgba(255, 255, 255, 0.3) 50%, rgba(255, 255, 255, 0.4) 85%, black 170%);
+  /* background: red; */
+  opacity: 100%;
 }
 
 .glass-reflection-two {
@@ -199,14 +218,16 @@ h1.reflection-text {
   justify-self: center;
   height: 100%;
   width: 100%;
-  background: linear-gradient(transparent -20%, rgb(255, 174, 0) 60%);
-  opacity: 90%;
-  /* border-radius: 50%; */
+  background: linear-gradient(transparent 20%, rgba(0, 0, 0, 0.5) 35%, rgba(0, 0, 0, 1) 65%);
+  opacity: 100%;
 }
 
-.reflection-blend {
+.ground-texture {
+  position: absolute;
   height: 100%;
   width: 100%;
-  background: radial-gradient(ellipse at top, transparent -10%, rgba(255, 255, 255, 0.514) 40%, transparent 90%);
-  opacity: 70%;
+  /* border: 2px solid green; */
+  background-image: url("../assets/transtextures/asfalt-light.png");
+  opacity: .4;
+  box-shadow: inset 0 15px 15px black;
 }
