--- a/src/style/Posterity2.css
+++ b/src/style/Posterity2.css
@@ -155,7 +155,7 @@ h1.reflection-text {
     0 0 42px rgb(255, 126, 203, 0.5), 0 0 82px rgb(255, 126, 203, 0.4),
     0 0 92px rgb(255, 126, 203, 0.3), 0 0 102px rgb(255, 126, 203, 0.2),
     0 0 151px rgba(255, 126, 203, 0.1);
-  opacity: 70%;
+  opacity: 80%;
   /* background: linear-gradient(black, white);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent; */
@@ -193,19 +193,14 @@ h1.reflection-text {
 
 }
 
-.reflection-blend {
-  height: 200%;
-  width: 200%;
-  background: radial-gradient(transparent, white, transparent);
-  opacity: 35%;
-  /* border-radius: 50%; */
-}
-
-.reflection-blend {
-  height: 200%;
-  width: 200%;
-  background: radial-gradient(transparent, white, transparent);
-  opacity: 100%;
+.glass-reflection-two {
+  position: absolute;
+  align-self: center;
+  justify-self: center;
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(transparent -20%, rgb(255, 174, 0) 60%);
+  opacity: 90%;
   /* border-radius: 50%; */
 }
 
@@ -215,13 +210,3 @@ h1.reflection-text {
   background: radial-gradient(ellipse at top, transparent -10%, rgba(255, 255, 255, 0.514) 40%, transparent 90%);
   opacity: 70%;
 }
-
-/* .glass-reflection-two {
-  position: absolute;
-  align-self: center;
-  justify-self: center;
-  height: 100%;
-  width: 100%;
-  background: linear-gradient(transparent -20%, rgb(0, 0, 0) 60%);
-  opacity: 90%;
-} */
